tests/reference/asr-generics_03-9e205ea.stderr
semantic error: Both type variables must support addition operation
 --> tests/../integration_tests/generics_03.py:6:12
  |
6 |     return x + y
  |            ^^^^^ 
